<?xml version="1.0" encoding="utf-8"?>
<!--
DVR Commander for TiVo allows control of a TiVo Premiere device.
Copyright (C) 2011  Anthony Lieuallen (arantius@gmail.com)

This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License along
with this program; if not, write to the Free Software Foundation, Inc.,
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-->
<resources>
  <string name="app_name">DVR Commander for TiVo®</string>
  <string name="beta_expired">This beta has expired, please update the app.</string>
  <string name="blackberry_discovery">Automatic discovery is not supported on BlackBerry devices, please enter values manually with "Custom Device".</string>
  <string name="pref_mak_instructions">"Log in to tivo.com, then open the 'View media access key' section to find this value.\n\nOr, on your TiVo, navigate to Settings > Account &amp; System Info > Media Access Key."</string>
  <string name="pref_tsn_instructions">"Log in to tivo.com, then open the 'DVR preferences' section to find this value; it should be like 'tsn:###' with 15 digits and no hyphens."</string>
  <string name="error_addr">"Missing TiVo's address."</string>
  <string name="error_mak">"Please provide your TiVo's Media Access Key."</string>
  <string name="error_no_device">Plase choose a TiVo device.</string>
  <string name="error_port">"Missing TiVo's port."</string>
  <string name="error_connect">Could not connect.  Are you on the right WiFi network?</string>
  <string name="error_auth">Authentication failed; check MAK settings.</string>
  <string name="keep_until">Keep Until</string>
  <string name="start_recording">Start recording</string>
  <string name="stop_recording">Stop recording</string>
  <string name="dont_record">Don\'t record</string>
  <string name="stop_recording_and_delete">Stop recording and delete</string>
  <string name="delete">Delete</string>
  <string name="delete_folder">Delete entire folder</string>
  <string name="watch_now">Watch now</string>
  <string name="watch_folder">Watch entire folder</string>
  <string name="channel">Channel</string>
  <string name="record_max">Keep at most</string>
  <string name="record_which">Record</string>
  <string name="error_wifi_lock">Could not do discovery; falling back to manual settings.</string>
  <string name="error_get_wifi_addr">Could not access wifi, is it enabled?</string>
  <string name="error_multicast">Device search failed.  Add a custom device.</string>
  <string name="error_net_control">You need to enable network control and/or video sharing to connect to this TiVo.  Check the help screen.</string>
  <string name="device_unsupported">This app designed only to work with a TiVo branded device, of the Premiere, Roamio, Bolt, or newer model line.\n\nThe selected device is incompatible.</string>
  <string name="device_unknown">This app designed only to work with a TiVo branded device, of the Premiere, Roamio, Bolt, or newer line.\n\nThe selected device is unknown, and is very likely incompatible.</string>
  <string name="device_compat_skip">WARNING: device compatibility checks skipped.  This device may not function correctly.</string>
  <string name="sub_season_pass">You have a Season Pass.</string>
  <string name="sub_single_offer">This show will be recorded.</string>
  <string name="sub_wishlist">You have a Wishlist.</string>
  <string name="sub_recording">This is recording now.</string>
  <string name="undelete">Undelete</string>
  <string name="unexpected_please_report">Unexpected condition, please send an error report, with the button at the bottom of the help screen.</string>
</resources>
