<?xml version="1.0" encoding="UTF-8"?>
<!--
DVR Commander for TiVo allows control of a TiVo Premiere device.
Copyright (C) 2011  Anthony Lieuallen (arantius@gmail.com)

This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 2 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License along
with this program; if not, write to the Free Software Foundation, Inc.,
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:text="@string/keep_until"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:layout_marginBottom="4dip" />
  <Spinner android:id="@+id/until" android:prompt="@string/keep_until"
    android:layout_width="fill_parent" android:layout_height="wrap_content" />

  <TextView android:text="@string/start_recording"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:layout_marginBottom="4dip" />
  <Spinner android:id="@+id/start" android:prompt="@string/start_recording"
    android:layout_width="fill_parent" android:layout_height="wrap_content" />

  <TextView android:text="@string/stop_recording"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:layout_marginBottom="4dip" />
  <Spinner android:id="@+id/stop" android:prompt="@string/stop_recording"
    android:layout_width="fill_parent" android:layout_height="wrap_content" />
</merge>
